--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ NamelessHeroes/ProjectSettings/ProjectSettings.asset
 
 # Unused imports
 NamelessHeroes/Assets/Imports/Ignored/
+CranberryRun/Assets/Wwise/ScriptableObjects/Event/033CBB82-0505-4AE6-857A-7B4EF9D304FB.asset.meta
