--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,68 @@ NamelessHeroes/ProjectSettings/ProjectSettings.asset
 # Unused imports
 NamelessHeroes/Assets/Imports/Ignored/
 CranberryRun/Assets/Wwise/ScriptableObjects/Event/033CBB82-0505-4AE6-857A-7B4EF9D304FB.asset.meta
+art/Rs11 art/bear.blend
+art/Rs11 art/Cros.png
+art/Rs11 art/game modules.blend
+art/Rs11 art/game modules.blend1
+art/Rs11 art/git jam key.txt
+art/Rs11 art/glow_texture.psd
+art/Rs11 art/Kill_game_icon.png
+art/Rs11 art/NewScene.pur
+art/Rs11 art/Render_Title_Game копия.png
+art/Rs11 art/Render_Title_Game.psd
+art/Rs11 art/Render_Title_Game2.png
+art/Rs11 art/Render_Title_Game2.psd
+art/Rs11 art/snd_ui_Back.png
+art/Rs11 art/snd_ui_back_head1.png
+art/Rs11 art/snd_ui_back_head2.png
+art/Rs11 art/snd_ui_Face1.png
+art/Rs11 art/snd_ui_Face2.png
+art/Rs11 art/snd_ui_Face3.png
+art/Rs11 art/snd_ui_top.png
+art/Rs11 art/Без имени-1.psd
+art/Rs11 art/Новая папка.rar
+art/Rs11 art/Environment/bear.blend
+art/Rs11 art/Environment/bear.blend1
+art/Rs11 art/Environment/bear.fbx
+art/Rs11 art/Environment/game modules.blend
+art/Rs11 art/Environment/game modules.blend1
+art/Rs11 art/Environment/game modules.fbx
+art/Rs11 art/Environment/Thooch_Cranberry.fbx
+art/Rs11 art/Environment/Trees.fbx
+art/Rs11 art/Environment/New Folder/models.rar
+art/Rs11 art/Environment/New Folder/sm_border_snow_1.fbx
+art/Rs11 art/Environment/New Folder/sm_border_snow_2.fbx
+art/Rs11 art/Environment/New Folder/sm_bush_corner.fbx
+art/Rs11 art/Environment/New Folder/sm_bush_middle.fbx
+art/Rs11 art/Environment/New Folder/sm_bush_single.fbx
+art/Rs11 art/Environment/New Folder/sm_cone.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_hole.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_0.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_1.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_2.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_3.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_4.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_5.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_6.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_ice_7.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_snow_1.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_snow_2.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_snow_big.fbx
+art/Rs11 art/Environment/New Folder/sm_ground_stucks.fbx
+art/Rs11 art/Environment/New Folder/sm_item_shine.fbx
+art/Rs11 art/Environment/New Folder/sm_old_oak.fbx
+art/Rs11 art/Environment/New Folder/sm_snow_man.fbx
+art/Rs11 art/Environment/New Folder/sm_snow_man_body.fbx
+art/Rs11 art/Environment/New Folder/sm_snow_man_bottom.fbx
+art/Rs11 art/Environment/New Folder/sm_snow_man_hat_0.fbx
+art/Rs11 art/Environment/New Folder/sm_snow_man_head.fbx
+art/Rs11 art/Environment/New Folder/sm_speed_platform.fbx
+art/Rs11 art/Environment/New Folder/sm_speed_platform_corner.fbx
+art/Rs11 art/Environment/New Folder/sm_speed_platform_middle.fbx
+art/Rs11 art/Environment/New Folder/sm_speed_platform_ramp.fbx
+art/Rs11 art/Environment/New Folder/SM_Stone.003.fbx
+art/Rs11 art/Environment/New Folder/SM_Stone.fbx
+art/Rs11 art/Environment/New Folder/sm_tree_1.fbx
+art/Rs11 art/Environment/New Folder/sm_Tree_2.fbx
+art/Rs11 art/Environment/New Folder/sm_Tree_3.fbx
